chore: install babel-jest and Babel presets for Jest transpilation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/gardu-rt/testing-practice#readme",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "babel-jest": "^30.0.5",
     "jest": "^30.0.5"
   }
 }
